--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <div class="registration-qr">
         <img src="assets/qr-register.png" alt="QR code for registration" width="180" height="180">
       </div>
-      <p class="registration-note">Scan the QR code above to register for the homecoming.</p>
+      <p class="registration-note">Scan the QR code above or use the link below to register for the homecoming.</p>
+      <a href="https://forms.gle/e2uof8zwDEQjkUZ1A" class="registration-link" target="_blank" rel="noopener noreferrer">Open registration form</a>
     </section>
 
     <footer class="footer">
