--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <dt>Date</dt>
           <dd>May 9, 2026</dd>
           <dt>Venue</dt>
-          <dd>Fortune Restaurant</dd>
+          <dd><a href="https://maps.app.goo.gl/ScbePVNYHBUes7nm8" class="details-map-link" target="_blank" rel="noopener noreferrer">Fortune Restaurant</a></dd>
           <dt>Address</dt>
-          <dd>14–16 Otek Street,<br>Baguio City</dd>
+          <dd><a href="https://maps.app.goo.gl/ScbePVNYHBUes7nm8" class="details-map-link" target="_blank" rel="noopener noreferrer">14–16 Otek Street,<br>Baguio City</a></dd>
           <dt>Hosts</dt>
           <dd>Batches 1976 and 2001</dd>
         </dl>
