--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
         <video
           class="teaser-player"
           src="assets/teaser.mp4"
-          controls
+          autoplay
+          loop
+          muted
           playsinline
           poster="assets/teaser-poster.jpg"
-          preload="metadata"
+          preload="auto"
+          controls
         >
           <p>Your browser does not support the video tag. <a href="assets/teaser.mp4">Download the teaser</a>.</p>
         </video>
